creada l'activitat de llistar temporades i alguna cosa més(?)

--- a/AfroditaNuvies/res/values/strings.xml
+++ b/AfroditaNuvies/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="prendremides">PRENDRE\'T LES MIDES</string>
     <string name="quisom">QUI SOM</string>
     <string name="dadescontacte">DADES DE CONTACTE</string>
+    <string name="title_activity_llistar_temporades">LlistarTemporades</string>
 
 </resources>
