Importació de la galeria de vestits i classes de suport necessaries

--- a/AfroditaNuvies/res/values/strings.xml
+++ b/AfroditaNuvies/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_llistar_temporades">LlistarTemporades</string>
     <string name="title_activity_llista_coleccions">LlistaColeccionsActivity</string>
     <string name="title_activity_mostrar_coleccio">MostrarColeccioActivity</string>
-
+	<string name="btnTancarVestit">Tornar</string>
+    
 </resources>
