--- a/AfroditaNuvies/res/values/strings.xml
+++ b/AfroditaNuvies/res/values/strings.xml
@@ -11,6 +11,12 @@
     <string name="title_activity_llistar_temporades">LlistarTemporades</string>
     <string name="title_activity_llista_coleccions">LlistaColeccionsActivity</string>
     <string name="title_activity_mostrar_coleccio">MostrarColeccioActivity</string>
-	<string name="btnTancarVestit">Tornar</string>
-    
+    <string name="btnTancarVestit">Tornar</string>
+    <string name="botoMostrarTeixits">Mostrar teixits</string>
+    <string name="botoMostrarVestits">Mostrar vestits</string>
+    <string name="title_activity_mostrar_teixit">MostrarTeixitActivity</string>
+    <string name="carregantTeixits">Carregant Teixits</string>
+    <string name="carregantColeccions">Carregant Coleccions</string>
+    <string name="carregantTemporades">Carregant Temporades</string>
+
 </resources>
